@@ -5,6 +5,7 @@ ver 0.19.8 (not yet released)
   - dsdiff, dsf: allow ID3 tags larger than 4 kB
   - ffmpeg: support interleaved floating point
 * fix clang 3.6 warnings
+* fix build failure on NetBSD
 
 ver 0.19.7 (2014/12/17)
 * input
